src/ui/snapshots/textsurf__ui__chrome__tests__first_active_tab_joins_the_divider_without_a_left_junction.snap
---
source: src/ui/chrome.rs
expression: rendered
---
 File  Navigate  View  Help   TextSurf  
│┌ first ┐ ┌ + ┐                       │
│┘       └─────────────────────────────┤
│[‹] [›] [↻] [⌂]  URL: │https://example│
├──────────────────────────────────────┤
│hello                                 │
│                                      │
Ready               https://example.com
