src/ui/snapshots/textsurf__ui__chrome__tests__full_chrome_snapshot.snap
---
source: src/ui/chrome.rs
expression: "crate::ui::test_util::buffer_string(terminal.backend().buffer())"
---
 example.com +                                              
‹  ›  ↻  https://example.com                                
hello                                                       
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
Ready                                   https://example.com
