src/ui/snapshots/textsurf__ui__chrome__tests__open_menu_overlays_a_dropdown.snap
---
source: src/ui/chrome.rs
expression: "crate::ui::test_util::buffer_string(terminal.backend().buffer())"
---
 File  Navigate  View  Help                       TextSurf                      
│┌ + ┐ ┌──────────┐                                                            │
├──────│Back      │────────────────────────────────────────────────────────────┤
│[‹] [›│Forward   │RL: │https://example.com                                    │
├──────│Home      │────────────────────────────────────────────────────────────┤
│hello └──────────┘                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
Ready                                                       https://example.com
